--- a/kg-frontend/src/app/components/forgot-password/forgot-password.html
+++ b/kg-frontend/src/app/components/forgot-password/forgot-password.html
@@ -1,12 +1,13 @@
-<!-- <form [formGroup]="forgotForm" (ngSubmit)="onSubmit()" class="forgotPassword">
+<div class="forgot-password-container">
     <h2>Forgot Password</h2>
 
-    <label>Email</label>
-    <input formControlName="email" type="email" placeholder="Enter your registered email" />
+    <form #forgotForm="ngForm" (ngSubmit)="submitEmail()" novalidate>
+        <input type="email" name="email" [(ngModel)]="email" placeholder="Enter your email" required #emailRef="ngModel"
+            email />
+        <div *ngIf="error" class="error">{{ error }}</div>
 
-    <button type="submit" [disabled]="loading">
-        {{ loading ? 'Sending...' : 'Send Reset Link' }}
-    </button>
+        <button type="submit" [disabled]="forgotForm.invalid">Send Reset Link</button>
+    </form>
 
-    <p class="message">{{ message }}</p>
-</form> -->
+    <a routerLink="/">Back to Login</a>
+</div>
