--- a/kg-frontend/src/app/pages/dashboard/dashboard.css
+++ b/kg-frontend/src/app/pages/dashboard/dashboard.css
@@ -2,7 +2,6 @@
 .dashboard-container {
     display: flex;
     height: 100vh;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f5f7fa;
     color: #682f12;
 }
@@ -70,11 +69,16 @@
     box-shadow: 0 2px 4px rgb(0 0 0 / 0.05);
 }
 
-.header h2 {
+.header a {
     margin: 0;
     font-size: 1.5rem;
     font-weight: 600;
     color: #682f12;
+    text-decoration: none;
+}
+
+.header h4 {
+    font-size: 17px;
 }
 
 .logout-btn {
