--- a/kg-frontend/src/app/components/create-new-user/create-new-user.html
+++ b/kg-frontend/src/app/components/create-new-user/create-new-user.html
@@ -27,9 +27,10 @@
         </div>
 
         <div class="dropdown-list" *ngIf="dropdownOpen">
+            <!-- Loop over filtered permissionsList -->
             <label *ngFor="let perm of permissionsList">
                 <input type="checkbox" [value]="perm.route"
-                    [checked]="userForm.get('permissions')?.value.includes(perm.route)"
+                    [checked]="(userForm.get('permissions')?.value || []).includes(perm.route)"
                     (change)="onAccessChange($event)" />
                 {{ perm.name }}
             </label>
