--- a/kg-frontend/src/app/components/sidebar/sidebar.html
+++ b/kg-frontend/src/app/components/sidebar/sidebar.html
@@ -1,10 +1,3 @@
-<nav class="sidebar">
-    <ul>
-        <li *ngFor="let comp of allComponents">
-            <a *ngIf="allowedComponents.includes(comp.route)" [routerLink]="['/', role + '-dashboard', comp.route]"
-                routerLinkActive="active-link">
-                {{ comp.name }}
-            </a>
-        </li>
-    </ul>
-</nav>
+<ul *ngFor="let user of users">
+    <li *ngFor="let perm of user.permissions">{{ perm }}</li>
+</ul>
