--- a/kg-frontend/src/app/components/sidebar/sidebar.html
+++ b/kg-frontend/src/app/components/sidebar/sidebar.html
@@ -1,3 +1,15 @@
-<ul *ngFor="let user of users">
-    <li *ngFor="let perm of user.permissions">{{ perm }}</li>
-</ul>
+<div class="sidebar">
+    <ul>
+        <li *ngIf="hasPermission('create-new-user')">
+            <a
+                [routerLink]="role.toLowerCase() === 'admin' ? ['/create-new-user'] : ['/', roleDashboard, 'create-new-user']">
+                Create New User
+            </a>
+        </li>
+        <li *ngIf="hasPermission('settings')">
+            <a [routerLink]="role.toLowerCase() === 'admin' ? ['/settings'] : ['/', roleDashboard, 'settings']">
+                Settings
+            </a>
+        </li>
+    </ul>
+</div>
