--- a/kg-frontend/src/app/components/login/login.css
+++ b/kg-frontend/src/app/components/login/login.css
@@ -10,6 +10,15 @@
     flex-direction: column;
 }
 
+.login-logo {
+    height: 120px;
+    width: 120px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    border-radius: 5px;
+}
+
 /* Heading */
 .form-heading {
     text-align: center;
