--- a/kg-frontend/src/app/components/login/login.html
+++ b/kg-frontend/src/app/components/login/login.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="login()" #loginForm="ngForm" class="loginForm">
-    <img src="../../../assets/kg-logo.png" alt="logo" class="login-logo">
+    <img src="../../../assets/LOGO.png" alt="logo" class="login-logo">
     <h2 class="form-heading">KG-Dashboard Login</h2>
     <label>Email</label>
     <input type="email" name="email" [(ngModel)]="email" required placeholder="Enter your email" />
