--- a/kg-frontend/src/app/pages/dashboard/dashboard.css
+++ b/kg-frontend/src/app/pages/dashboard/dashboard.css
@@ -84,12 +84,13 @@
     background-color: #ef4444;
     color: white;
     border: none;
-    padding: 0.5rem 1rem;
-    font-size: 0.9rem;
+    padding: 5px 15px;
+    font-size: 16px;
     font-weight: 600;
     border-radius: 6px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-left: 20px;
 }
 
 .logout-btn:hover {
@@ -102,4 +103,35 @@
     padding: 1.5rem;
     overflow-y: auto;
     background-color: #f8fafc;
+}
+
+.user-details-content {
+    display: flex;
+}
+
+.user-details {
+    background-color: #ac4410;
+    color: white;
+    border: none;
+    padding: 5px 15px;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: flex;
+    align-items: center;
+}
+
+.user-details:hover {
+    background-color: #762e0a;
+}
+
+.user-icon {
+    width: 30px;
+    height: 30px;
+}
+
+.user-text {
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
 }
