--- a/kg-frontend/src/app/pages/dashboard/dashboard.html
+++ b/kg-frontend/src/app/pages/dashboard/dashboard.html
@@ -13,7 +13,8 @@
                 <h4>Welcome {{userName}}</h4>
             </div>
             <div class="user-details-content">
-                <a *ngIf="user" [routerLink]="['/' + role + '-dashboard' + '-user', userId]" class="user-details">
+                <!-- *ngIf="user" [routerLink]="['/' + role + '-dashboard-user', userId]" -->
+                <a class="user-details">
                     <img src="../../../assets/user-1.png" alt="icon" class="user-icon">
                     <span class="user-text">User Details</span>
                 </a>
