Revert "Added New Component"
This reverts commit ad439cdf653c922cc25c7fabaa2a7c6ccf16bd76.

--- a/kg-frontend/src/app/components/user-details/user-details.html
+++ b/kg-frontend/src/app/components/user-details/user-details.html
@@ -1,4 +1,4 @@
-<!-- <div *ngIf="loading">Loading user details...</div>
+<div *ngIf="loading">Loading user details...</div>
 <div *ngIf="error" class="error">{{ error }}</div>
 
 <div *ngIf="user && !loading">
@@ -9,8 +9,4 @@
     <p><strong>Phone:</strong> {{ user.phone }}</p>
     <p><strong>Role:</strong> {{ user.role }}</p>
     <p><strong>Permissions:</strong> {{ user.permissions }}</p>
-</div> -->
-
-<div>
-    Helo...
 </div>
