--- a/kg-frontend/src/app/pages/dashboard/dashboard.html
+++ b/kg-frontend/src/app/pages/dashboard/dashboard.html
@@ -13,11 +13,14 @@
                 <h4>Welcome {{userName}}</h4>
             </div>
             <div class="user-details-content">
-                <a *ngIf="user" [routerLink]="['/' + role + '-dashboard-user', userId]" class="user-details">
+                <button *ngIf="user" (click)="openModal()" class="user-details">
                     <img src="../../../assets/user-1.png" alt="icon" class="user-icon">
                     <span class="user-text">User Details</span>
-                </a>
+                </button>
                 <button class="logout-btn" (click)="logout()">Logout</button>
+                <app-modal [isOpen]="showModal" (close)="closeModal()">
+                    <app-user-details></app-user-details>
+                </app-modal>
             </div>
         </header>
 
