--- a/kg-frontend/src/app/components/chilkooru-report/chilkooru-report.html
+++ b/kg-frontend/src/app/components/chilkooru-report/chilkooru-report.html
@@ -1,4 +1,5 @@
 <div class="chilkooru-report-container">
+    <button (click)="submitReport()" class="submitReport-btn">Submit</button>
     <div class="chilkooru-report-content-table-1">
         <table class="excel-table chilkooru-report-table-1">
             <!-- Header -->
@@ -20,9 +21,9 @@
             <tr class="opening-balance-section">
                 <td>1</td>
                 <td>Opening Balance</td>
-                <td contenteditable="true"
+                <td contenteditable="true" [attr.data-placeholder]='0'
                     (input)="openingBalance = +$any($event.target).innerText || 0; updateGrossSale()">
-                    {{ openingBalance }}
+                    {{ openingBalance || '' }}
                 </td>
                 <td></td>
                 <td></td>
