--- a/kg-frontend/src/app/components/all-users/all-users.css
+++ b/kg-frontend/src/app/components/all-users/all-users.css
@@ -14,6 +14,7 @@
     width: 100%;
     border-collapse: collapse;
     background: #fff;
+    box-shadow: 0 4px 14px rgba(0, 0, 0, 0.5);
 }
 
 .users-table th,
