--- a/kg-frontend/src/app/components/sidebar/sidebar.css
+++ b/kg-frontend/src/app/components/sidebar/sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
     width: 100%;
     height: 100%;
-    padding: 1rem 0;
+    padding-top: 1rem;
 }
 
 .sidebar-content {
@@ -72,5 +72,4 @@
 
 .sidebar-subnav:hover {
     background: #f0f0f0;
-    border-radius: 6px;
 }
