--- a/kg-frontend/src/app/pages/dashboard/dashboard.css
+++ b/kg-frontend/src/app/pages/dashboard/dashboard.css
@@ -13,6 +13,7 @@
     color: white;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 }
 
 .sidebar-header {
@@ -114,7 +115,7 @@
     background-color: #ac4410;
     color: white;
     border: none;
-    padding: 5px 15px;
+    padding: 5px 8px;
     border-radius: 6px;
     cursor: pointer;
     transition: background-color 0.3s ease;
