--- a/kg-frontend/src/app/pages/dashboard/dashboard.html
+++ b/kg-frontend/src/app/pages/dashboard/dashboard.html
@@ -15,7 +15,7 @@
             <div class="user-details-content">
                 <button *ngIf="user" (click)="openModal()" class="user-details">
                     <img src="../../../assets/user-1.png" alt="icon" class="user-icon">
-                    <span class="user-text">User Details</span>
+                    <!-- <span class="user-text">User Details</span> -->
                 </button>
                 <button class="logout-btn" (click)="logout()">Logout</button>
                 <app-modal [isOpen]="showModal" (close)="closeModal()">
